--- a/osa3/puhlbackend/package.json
+++ b/osa3/puhlbackend/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "mongoose": "^5.4.11",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
