--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -11,7 +11,10 @@
   "author": "Anna Piirainen",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.12"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
