--- a/osa5/bloglist-backend/package.json
+++ b/osa5/bloglist-backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.5",
-    "mongoose-unique-validator": "^2.0.2"
+    "mongoose-unique-validator": "^2.0.2",
+    "prop-types": "^15.7.2"
   }
 }
